Jenkins experiment with windows and timeouts